add unique id for event

--- a/site/static/config.yml
+++ b/site/static/config.yml
@@ -13,7 +13,7 @@ collections: # A list of collections the CMS should be able to edit
     folder: "site/content/events" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
-      - {label: "Unique Id Name(Don't Change Later)", name: "name", widget: "string"}    
+      - {label: "Unique Id Name(Once event created don't change it will break links)", name: "name", widget: "string"}    
       - {label: "List Item Title", name: "listItemTitle", widget: "string"}
       - {label: "List Item Image", name: "listItemImage", widget: "image"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
@@ -390,5 +390,5 @@ collections: # A list of collections the CMS should be able to edit
       - {label: Title, name: title, widget: string}
       - {label: Image, name: imageUrl, widget: image}
       - {label: Call To Action Label, name: callToAction, widget: string}
-      - {label: Call To Action Event, name: callToActionEvent, widget: relation, collection: events, searchFields: [listItemTitle], valueField: "{{slug}}", displayFields: [listItemTitle]}
+      - {label: Call To Action Event, name: callToActionEvent, widget: relation, collection: events, searchFields: [listItemTitle], valueField: name, displayFields: [listItemTitle]}
     create: true
