--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -13,7 +13,7 @@ collections: # A list of collections the CMS should be able to edit
     folder: "site/content/events" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
-      - {label: "Unique Id Name(Don't Change Later)", name: "name", widget: "string"}
+      - {label: "Unique Id Name(Once event created don't change it will break links)", name: "name", widget: "string"}  
       - {label: "List Item Title", name: "listItemTitle", widget: "string"}
       - {label: "List Item Image", name: "listItemImage", widget: "image"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
@@ -388,5 +388,5 @@ collections: # A list of collections the CMS should be able to edit
     fields:
       - {label: Title, name: title, widget: string}
       - {label: Call To Action Label, name: callToAction, widget: string}
-      - {label: Call To Action Event, name: callToActionEvent, widget: relation, collection: events, searchFields: [listItemTitle], value_field: "{{slug}}", display_fields: [listItemTitle]}
+      - {label: Call To Action Event, name: callToActionEvent, widget: relation, collection: events, searchFields: [listItemTitle], value_field: name, display_fields: [listItemTitle]}
     create: true
