--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -395,6 +395,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Toggle Webinar", name: "enabled", widget: "boolean", default: true}
       - {label: Title, name: title, widget: string}
       - {label: Image, name: imageUrl, widget: image}
+      - {label: Video URL, name: videoUrl, widget: string}
       - {label: Call To Action Label, name: callToAction, widget: string}
       - {label: Call To Action Event, name: callToActionEvent, widget: relation, collection: events, searchFields: [listItemTitle], valueField: name, displayFields: [listItemTitle],required: false}
     create: true
