--- a/site/static/config.yml
+++ b/site/static/config.yml
@@ -396,17 +396,18 @@ collections: # A list of collections the CMS should be able to edit
           - {label: Heading, name: heading, widget: string, required: false}
           - {label: Intro, name: intro, widget: string, required: false}
           - {label: Call To Action Label, name: callToAction, widget: string}         
+  - name: "webinars"
     label: "Webinars"
     folder: "site/content/webinars"
     identifier_field: name
     filter: {field: "enabled", value: true}
-    fields:
-      - {label: "Webinar Date", name: "endDate", widget: "datetime", default: ""}
+    fields:      
+      - {label: "Webinar Date", name: "endDate", widget: "datetime", default:  ""}
       - {label: "Unique Id Name(Once webinar created don't change it will break links)", name: "name", widget: "string"}
       - {label: "Toggle Webinar", name: "enabled", widget: "boolean", default: true}
       - {label: Title, name: title, widget: string}
-      - {label: Image, name: imageUrl, widget: image}
-      - {label: Video URL, name: videoUrl, widget: string}
-      - {label: Call To Action Label, name: callToAction, widget: string}
+      - {label: Image, name: imageUrl, widget: image, required: false}
+      - {label: Video URL, name: videoUrl, widget: string, required: false}
+      - {label: Call To Action Label, name: callToAction, widget: string, required: false}
       - {label: Call To Action Event, name: callToActionEvent, widget: relation, collection: events, searchFields: [listItemTitle], valueField: name, displayFields: [listItemTitle],required: false}
     create: true
