added ability to archive and disable items and markdown for bio field

--- a/site/static/config.yml
+++ b/site/static/config.yml
@@ -21,7 +21,8 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "List Item Image", name: "listItemImage", widget: "image"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "List Item Image Call to Action Text", name: "callToAction", widget: "string"}
-      - {label: "Event Date", name: "eventDate", widget: "datetime"}
+      - {label: "Event Start Date", name: "eventDate", widget: "datetime"}
+      - {label: "Event End Date", name: "eventEndDate", widget: "datetime"}
       - {label: "Presenters Section Header", name: "presentersHeaderText", widget: "string", required: false}
       - {label: "Bio Section Header", name: "bioHeaderText", widget: "string", required: false}
       - {label: "Sponsors Section Header", name: "sponsorsHeaderText", widget: "string", required: false}
@@ -49,7 +50,7 @@ collections: # A list of collections the CMS should be able to edit
         widget: list
         fields:
           - {label: "Name", name: "name", widget: "string"}
-          - {label: "Bio", name: "bio", widget: "text"}
+          - {label: "Bio", name: "bio", widget: "markdown"}
           - {label: "Photo Url", name: "photoUrl", widget: "image"}
       - label: Sponsors
         name: eventSponsors
@@ -369,11 +370,16 @@ collections: # A list of collections the CMS should be able to edit
         label: "Events Page"
         name: "events"
         fields:
+          - {label: "Show Past Items", name: "showPastItems", widget: "boolean", default: false}
           - {label: Title, name: title, widget: string}
           - {label: Image, name: image, widget: image}
           - {label: Image Jumbotron Style, name: jumboClass, widget: string}
           - {label: Heading, name: heading, widget: string, required: false}
           - {label: Intro, name: intro, widget: string, required: false}
+          - {label: TopSectionHeading, name: topSectionHeading, widget: string, required: false}
+          - {label: TopSectionHeadingIntro, name: topSectionHeadingIntro, widget: string, required: false}
+          - {label: BottomSectionHeading, name: bottomSectionHeading, widget: string, required: false}
+          - {label: BottomSectionHeadingIntro, name: bottomSectionHeadingIntro, widget: string, required: false}
       - file: "site/content/webinars/_index.md"
         label: "Webinars Page"
         name: "webinars"
