added layout prop to as hidden with default value

--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   repo: open-voice-network/website
-  branch: main
+  branch: cr_add_layout_prop_to_cms_join_hire
 media_folder: "site/static/img" # Folder where user uploaded files should go
 public_folder: "img"
 
@@ -307,9 +307,10 @@ collections: # A list of collections the CMS should be able to edit
         label: "Positions to Hire Page"
         name: "positions-to-hire"
         fields:
+          - {label: Layout, name: layout, widget: hidden, default: positions-to-hire }
           - {label: Title, name: title, widget: string}
           - {label: Image, name: image, widget: image}
-          - {label: Heading, name: heading, widget: string}
+          - {label: Heading, name: heading, widget: string, required: false}
           - {label: Intro, name: intro, widget: markdown}
           - label: Positions
             name: positions
