--- a/site/static/config.yml
+++ b/site/static/config.yml
@@ -81,7 +81,23 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "pages"
     label: "Pages"
-    files:      
+    files:
+      - file: "site/content/crowd_funding/_index.md"
+        label: "Crowdfunding Page"
+        name: "crowdfunding"
+        fields:
+          - {label: Title, name: title, widget: string}
+          - {label: Image, name: image, widget: image}
+          - {label: Image Jumbotron Style, name: jumboClass, widget: string, required: false}
+          - label: Sections
+            name: sections
+            widget: list
+            fields:
+              - {label: Heading, name: heading, widget: string}              
+              - {label: TextHTML, name: textHTML, widget: text}
+              - {label: Background Image, name: imageUrl, widget: image, required: false}
+              - {label: Call to Action Label, name: callToActionText, widget: string, required: false}
+              - {label: Call to Action Url, name: callToActionUrl, widget: string, required: false}      
       - file: "site/content/_index.md"
         label: "Home Page"
         name: "home"
