--- a/site/static/config.yml
+++ b/site/static/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   repo: open-voice-network/website
-  branch: main
+  branch: feature_add_crowdfunding_page
 media_folder: "site/static/img" # Folder where user uploaded files should go
 public_folder: "img"
 
